objects/Contract.object
<CustomObject>
    <fields>
        <fullName>kuga_sub__RenewalTerm__c</fullName>
        <description>Renewal Term in Months for the Current Renewal Opportunity. 

Changes made to Renewal Term will update Service Term of the related Current Renewal Opportunity&apos;s Opportunity Products with Line Terms greater than or equal to 1 Month.</description>
        <label>Renewal Term (months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>kuga_sub__SendRenewalNoticeToday__c</fullName>
        <description>System field for the Automated Contract Renewal Notification Email functionality.

Function requires Kugamon Contract Renewal Notice Email Subscription Automation in Kugamon Settings to be activated.</description>
        <formula>AND(kuga_sub__AutoEmailRenewalNotice__c = True, 
kuga_sub__Effective__c = True, 
kuga_sub__ContractRenewalNoticeDate__c  &lt;= Today(),

 OR(kuga_sub__LastRenewalNoticeSentDate__c &lt;  kuga_sub__ContractRenewalNoticeDate__c, ISBLANK(kuga_sub__LastRenewalNoticeSentDate__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Send Renewal Notice Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>kuga_sub__SubscriptionEndDate__c</fullName>
        <description>The latest End Date of all the related Subscriptions.</description>
        <label>Subscription End Date</label>
        <summarizedField>kuga_sub__Subscription__c.kuga_sub__EndDate__c</summarizedField>
        <summaryForeignKey>kuga_sub__Subscription__c.kuga_sub__ContractNumber__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__SubscriptionStartDate__c</fullName>
        <description>The earliest Start Date of all the related Subscriptions.</description>
        <label>Subscription Start Date</label>
        <summarizedField>kuga_sub__Subscription__c.kuga_sub__StartDate__c</summarizedField>
        <summaryForeignKey>kuga_sub__Subscription__c.kuga_sub__ContractNumber__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__TotalSubscriptionAmount__c</fullName>
        <description>Total sum of the Net Amount of all the Subscription records associated with the related Contract.</description>
        <label>Total Subscription Amount</label>
        <summarizedField>kuga_sub__Subscription__c.kuga_sub__NetAmount__c</summarizedField>
        <summaryForeignKey>kuga_sub__Subscription__c.kuga_sub__ContractNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__TotalSubscriptionCount__c</fullName>
        <description>Total count of  all Subscription records associated with the related Contract.</description>
        <label>Total Subscription Count</label>
        <summaryForeignKey>kuga_sub__Subscription__c.kuga_sub__ContractNumber__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>kuga_sub__TotalSubscriptionQuantity__c</fullName>
        <description>Total sum of the Quantity fields on all Subscription records associated with the related Contract.</description>
        <label>Total Subscription Quantity</label>
        <summarizedField>kuga_sub__Subscription__c.kuga_sub__Quantity__c</summarizedField>
        <summaryForeignKey>kuga_sub__Subscription__c.kuga_sub__ContractNumber__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACV__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>Parent_Contract__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>Opportunity__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>COA_Status__c</columns>
        <columns>Renewal_Feedback__c</columns>
        <columns>Key_Contact__c</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>OWNER_EXPIRATION_NOTICE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS</field>
            <operation>equals</operation>
            <value>Activated</value>
        </filters>
        <label>All Contracts Activated</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>ExpiringContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>Key_Contact__c</columns>
        <columns>Renewal_Opportunity__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.START_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Contract Start date</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Expiring_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>Renewal_Feedback__c</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>SBQQ__ExpirationDate__c</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>COA_Status__c</columns>
        <columns>Opportunity__c</columns>
        <columns>Parent_Contract__c</columns>
        <columns>Key_Contact__c</columns>
        <columns>Renewal_Opportunity__c</columns>
        <columns>OWNER_EXPIRATION_NOTICE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.END_DATE</field>
            <operation>lessOrEqual</operation>
            <value>NEXT_90_DAYS</value>
        </filters>
        <filters>
            <field>CONTRACT.END_DATE</field>
            <operation>greaterOrEqual</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>Expiring Contracts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>kuga_sub__All_Effective_Contracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.STATUS</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>CONTRACT_TERM</columns>
        <columns>kuga_sub__RenewalTerm__c</columns>
        <columns>kuga_sub__Expanded__c</columns>
        <columns>kuga_sub__AutoEmailRenewalNotice__c</columns>
        <columns>kuga_sub__AutoEmailRenewalOrder__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>kuga_sub__Effective__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Effective Contracts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>